--- a/Machine Learning/model/MLP.ipynb
+++ b/Machine Learning/model/MLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -21,7 +21,71 @@
      "text": [
       "The training accuracy for Neural Network is  0.9725818123341642\n",
       "The testing accuracy for Neural Network is  0.9741575356626008\n",
-      "time taken for mlp =  0:00:48.165376\n"
+      "time taken for mlp =  0:00:48.165376\n",
+      "The training accuracy for Random Forestry is  0.9928554198876623\n",
+      "The testing accuracy for Random Forestry is  0.9660946867893322\n",
+      "time taken for rf =  0:01:18.048704\n",
+      "MLP:\n",
+      "[[ 176    0    0    0    0    0    0    0    0    0    0    0]\n",
+      " [   0 1242    2    0    2    1    3    0    0    0    0   13]\n",
+      " [   0  167 1086    0   15    0    0    0    0    0    0    5]\n",
+      " [   0    0    0  800    0    0    0    0    0    0    0    0]\n",
+      " [   0    0    0    0  804    0    0    0    0    0    0    1]\n",
+      " [   1    0    2    0    3  774    0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0  693    0    0    0    0    0]\n",
+      " [   0    0    5    2    1    0    0  918    0    0    0    0]\n",
+      " [   0   14    1    2    4    0    0    0 1051    4    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0  675    0    0]\n",
+      " [   0    0    0    0    1    0    0    0    0    0  660    0]\n",
+      " [   0    0    0    0    1    0    0    0    0    0    0  545]]\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.99      1.00      1.00       176\n",
+      "          1       0.87      0.98      0.92      1263\n",
+      "          2       0.99      0.85      0.92      1273\n",
+      "          3       1.00      1.00      1.00       800\n",
+      "          4       0.97      1.00      0.98       805\n",
+      "          5       1.00      0.99      1.00       780\n",
+      "          6       1.00      1.00      1.00       693\n",
+      "          7       1.00      0.99      1.00       926\n",
+      "          8       1.00      0.98      0.99      1076\n",
+      "          9       0.99      1.00      1.00       675\n",
+      "         10       1.00      1.00      1.00       661\n",
+      "         11       0.97      1.00      0.98       546\n",
+      "\n",
+      "avg / total       0.98      0.97      0.97      9674\n",
+      "\n",
+      "RF:\n",
+      "[[ 176    0    0    0    0    0    0    0    0    0    0    0]\n",
+      " [   0 1106  157    0    0    0    0    0    0    0    0    0]\n",
+      " [   0  166 1107    0    0    0    0    0    0    0    0    0]\n",
+      " [   2    0    0  798    0    0    0    0    0    0    0    0]\n",
+      " [   0    0    0    0  804    0    0    1    0    0    0    0]\n",
+      " [   1    0    0    0    0  779    0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0  693    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0    0  926    0    0    0    0]\n",
+      " [   0    0    0    1    0    0    0    0 1075    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0  675    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0  661    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0  546]]\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.98      1.00      0.99       176\n",
+      "          1       0.87      0.88      0.87      1263\n",
+      "          2       0.88      0.87      0.87      1273\n",
+      "          3       1.00      1.00      1.00       800\n",
+      "          4       1.00      1.00      1.00       805\n",
+      "          5       1.00      1.00      1.00       780\n",
+      "          6       1.00      1.00      1.00       693\n",
+      "          7       1.00      1.00      1.00       926\n",
+      "          8       1.00      1.00      1.00      1076\n",
+      "          9       1.00      1.00      1.00       675\n",
+      "         10       1.00      1.00      1.00       661\n",
+      "         11       1.00      1.00      1.00       546\n",
+      "\n",
+      "avg / total       0.97      0.97      0.97      9674\n",
+      "\n",
+      "done\n"
      ]
     }
    ],
@@ -131,82 +195,82 @@
      "output_type": "stream",
      "text": [
       "Feature ranking:\n",
-      "1. feature 0 (0.047954)\n",
-      "2. feature 6 (0.043638)\n",
-      "3. feature 71 (0.037507)\n",
-      "4. feature 1 (0.037122)\n",
-      "5. feature 35 (0.034155)\n",
-      "6. feature 17 (0.030714)\n",
-      "7. feature 7 (0.028875)\n",
-      "8. feature 3 (0.027415)\n",
-      "9. feature 33 (0.025348)\n",
-      "10. feature 28 (0.022039)\n",
-      "11. feature 53 (0.021863)\n",
-      "12. feature 64 (0.020030)\n",
-      "13. feature 4 (0.017762)\n",
-      "14. feature 46 (0.017517)\n",
-      "15. feature 26 (0.017068)\n",
-      "16. feature 21 (0.016746)\n",
-      "17. feature 69 (0.016733)\n",
-      "18. feature 20 (0.016564)\n",
-      "19. feature 59 (0.016473)\n",
-      "20. feature 58 (0.016427)\n",
-      "21. feature 57 (0.016203)\n",
-      "22. feature 62 (0.016167)\n",
-      "23. feature 22 (0.015990)\n",
-      "24. feature 40 (0.015107)\n",
-      "25. feature 44 (0.015054)\n",
-      "26. feature 39 (0.014183)\n",
-      "27. feature 56 (0.014060)\n",
-      "28. feature 63 (0.013879)\n",
-      "29. feature 23 (0.013329)\n",
-      "30. feature 70 (0.013229)\n",
-      "31. feature 51 (0.013012)\n",
-      "32. feature 38 (0.012997)\n",
-      "33. feature 52 (0.012153)\n",
-      "34. feature 66 (0.011909)\n",
-      "35. feature 45 (0.011826)\n",
-      "36. feature 54 (0.011532)\n",
-      "37. feature 34 (0.011167)\n",
-      "38. feature 18 (0.011111)\n",
-      "39. feature 12 (0.010947)\n",
-      "40. feature 41 (0.010849)\n",
-      "41. feature 27 (0.010830)\n",
-      "42. feature 30 (0.010750)\n",
-      "43. feature 2 (0.010329)\n",
-      "44. feature 60 (0.010310)\n",
-      "45. feature 10 (0.009793)\n",
-      "46. feature 67 (0.009534)\n",
-      "47. feature 9 (0.009475)\n",
-      "48. feature 24 (0.009470)\n",
-      "49. feature 31 (0.009392)\n",
-      "50. feature 42 (0.009210)\n",
-      "51. feature 48 (0.009124)\n",
-      "52. feature 13 (0.008504)\n",
-      "53. feature 49 (0.008336)\n",
-      "54. feature 19 (0.008002)\n",
-      "55. feature 29 (0.007689)\n",
-      "56. feature 55 (0.006947)\n",
-      "57. feature 61 (0.006667)\n",
-      "58. feature 68 (0.006666)\n",
-      "59. feature 32 (0.006275)\n",
-      "60. feature 14 (0.006252)\n",
-      "61. feature 25 (0.006119)\n",
-      "62. feature 36 (0.005247)\n",
-      "63. feature 11 (0.005246)\n",
-      "64. feature 65 (0.005144)\n",
-      "65. feature 5 (0.004587)\n",
-      "66. feature 47 (0.004554)\n",
-      "67. feature 43 (0.004314)\n",
-      "68. feature 37 (0.003979)\n",
-      "69. feature 16 (0.003021)\n",
-      "70. feature 50 (0.002927)\n",
-      "71. feature 15 (0.002436)\n",
-      "72. feature 8 (0.002221)\n",
-      "mean: 0.306290\n",
-      "max: 0.252042\n",
-      "iqr: 0.192251\n",
-      "mad: 0.249417\n",
+      "1. feature 6 (0.050005)\n",
+      "2. feature 71 (0.048390)\n",
+      "3. feature 0 (0.041725)\n",
+      "4. feature 1 (0.034740)\n",
+      "5. feature 35 (0.031218)\n",
+      "6. feature 69 (0.029668)\n",
+      "7. feature 17 (0.027375)\n",
+      "8. feature 53 (0.026717)\n",
+      "9. feature 18 (0.024729)\n",
+      "10. feature 3 (0.024702)\n",
+      "11. feature 7 (0.023887)\n",
+      "12. feature 46 (0.021854)\n",
+      "13. feature 58 (0.021561)\n",
+      "14. feature 57 (0.020790)\n",
+      "15. feature 4 (0.020370)\n",
+      "16. feature 62 (0.019004)\n",
+      "17. feature 51 (0.018482)\n",
+      "18. feature 19 (0.018170)\n",
+      "19. feature 64 (0.018123)\n",
+      "20. feature 56 (0.018092)\n",
+      "21. feature 45 (0.018059)\n",
+      "22. feature 39 (0.017897)\n",
+      "23. feature 63 (0.017789)\n",
+      "24. feature 44 (0.017496)\n",
+      "25. feature 40 (0.016132)\n",
+      "26. feature 38 (0.015570)\n",
+      "27. feature 34 (0.014961)\n",
+      "28. feature 59 (0.014579)\n",
+      "29. feature 54 (0.013655)\n",
+      "30. feature 28 (0.013430)\n",
+      "31. feature 70 (0.013016)\n",
+      "32. feature 12 (0.012673)\n",
+      "33. feature 33 (0.012081)\n",
+      "34. feature 42 (0.011684)\n",
+      "35. feature 24 (0.011588)\n",
+      "36. feature 66 (0.011492)\n",
+      "37. feature 60 (0.010695)\n",
+      "38. feature 13 (0.010638)\n",
+      "39. feature 67 (0.010578)\n",
+      "40. feature 52 (0.010180)\n",
+      "41. feature 65 (0.009739)\n",
+      "42. feature 2 (0.009622)\n",
+      "43. feature 41 (0.009583)\n",
+      "44. feature 9 (0.009255)\n",
+      "45. feature 20 (0.008781)\n",
+      "46. feature 26 (0.008773)\n",
+      "47. feature 48 (0.008501)\n",
+      "48. feature 10 (0.008401)\n",
+      "49. feature 14 (0.007143)\n",
+      "50. feature 61 (0.006864)\n",
+      "51. feature 49 (0.006855)\n",
+      "52. feature 55 (0.006701)\n",
+      "53. feature 21 (0.006556)\n",
+      "54. feature 22 (0.006252)\n",
+      "55. feature 68 (0.006237)\n",
+      "56. feature 36 (0.006198)\n",
+      "57. feature 47 (0.006124)\n",
+      "58. feature 25 (0.006105)\n",
+      "59. feature 27 (0.005307)\n",
+      "60. feature 31 (0.004951)\n",
+      "61. feature 37 (0.004772)\n",
+      "62. feature 11 (0.004544)\n",
+      "63. feature 5 (0.003945)\n",
+      "64. feature 23 (0.003908)\n",
+      "65. feature 43 (0.003412)\n",
+      "66. feature 32 (0.003362)\n",
+      "67. feature 50 (0.003161)\n",
+      "68. feature 16 (0.003093)\n",
+      "69. feature 15 (0.002799)\n",
+      "70. feature 30 (0.001952)\n",
+      "71. feature 8 (0.001689)\n",
+      "72. feature 29 (0.001619)\n",
+      "mean: 0.296605\n",
+      "max: 0.183744\n",
+      "iqr: 0.222678\n",
+      "mad: 0.296973\n",
       "median: 0.000000\n"
      ]
     }
